--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 # file will be overwritten by workflow to reflect url of dynamic resource server
 # THIS FILE WILL BE OVERWRITTEN
+REACT_APP_API_URL=http://localhost/api/v1/healthcare
